# wall-e-dora

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  conventions.md  dataflow.yml  hello.py  mantine-installation.md  pyproject.toml  service_runner.sh
audio/: README.md  (+1 more)
nodes/web/: README.md  cert.pem  grid_state.json  key.pem  package.json  pyproject.toml
nodes/web/resources/: README.md  REFACTORING_NOTES.md  TODO.md  manifest.webmanifest  package.json  pnpm-lock.yaml  service-worker.js  template.html  test-setup.js  webpack.config.js
nodes/web/resources/__mocks__/: styleMock.js
nodes/web/resources/js/: Node.js
nodes/web/resources/scripts/: App.jsx  App.vue  Gamepads.js  Node.js  main.js
nodes/web/resources/scripts/components/: AddWidget.jsx  AddWidget.vue  CameraFeed.vue  ConnectionStatus.jsx  ConnectionStatus.vue  Gamepad.jsx  Gamepad.vue  GamepadDebug.vue  GridLock.jsx  GridLock.vue  JoystickControl.jsx  Node.vue  Power.jsx  Power.vue  ServoControl.jsx  ServoControl.vue  ServoSelector.jsx  ServoStatus.jsx  ServoStatus.vue  Sounds.vue  SoundsWidget.jsx  SoundsWidget.vue  TestWidget.jsx  TestWidget.vue  Volume.jsx  Volume.vue  WidgetContainer.jsx  WidgetContainer.vue
nodes/web/resources/scripts/components/common/: index.js
nodes/web/resources/scripts/components/common/inputs/: ServoSelector.jsx  index.js
nodes/web/resources/scripts/components/controls/: AddWidgetControl.jsx  GridLockControl.jsx  RandomSoundControl.jsx  VolumeControl.jsx  index.js
nodes/web/resources/scripts/components/gamepad/: GamepadMappingDialog.jsx
nodes/web/resources/scripts/components/status/: ConnectionStatus.jsx  GamepadStatus.jsx  PowerStatus.jsx  ServoStatus.jsx  index.js
nodes/web/resources/scripts/components/widgets/: EyesWidget.jsx  JoystickWidget.jsx  PowerWidget.jsx  ServoWidget.jsx  SoundWidget.jsx  TestWidget.jsx  index.js
nodes/web/resources/scripts/constants/: widgetTypes.js
nodes/web/resources/scripts/contexts/: AppContext.jsx  GridContext.jsx
nodes/web/resources/scripts/contexts/__mocks__/: GridContext.jsx
nodes/web/resources/scripts/contexts/__tests__/: AppContext.test.jsx
nodes/web/resources/scripts/utils/: settingsManager.js  widgetMigration.js
nodes/web/resources/scripts/utils/__tests__/: widgetMigration.test.js
nodes/web/resources/scripts/views/: Dashboard.jsx  Dashboard.vue  DashboardView.jsx  Gamepad.jsx  Gamepad.vue  GamepadView.jsx  ServoDebug.jsx  ServoDebug.vue  ServoDebugView.jsx  index.js
nodes/web/resources/styles/: main.css
nodes/web/tests/: test_web.py
nodes/web/web/: __main__.py  main.py
nodes/web/web/handlers/: __init__.py  gamepad_profiles.py
tracks/firmware/: CMakeLists.txt  main.c  main.cpp
waveshare_servo/: pyproject.toml
(+117 files in other folders)
