[project]
name = "waveshare_servo"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "waveshare_servo"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["dora-rs >= 0.3.6"]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
waveshare_servo = "waveshare_servo.main:main"
